фича: добавить возможность добавлять файл в реестр и просматривать все файлы компании
